--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -14,7 +14,7 @@
 \ytl{2017-09-21}{Adblockers started to block coinhive scripts}
 \ytl{2017-09-24}{Showtime caught running coinhive}
 \ytl{2017-09-25}{Coinhive clones started to appear}
-\ytl{2017-10-13}{Politifact website compromised to run Coinhive}
+\ytl{2017-10-13}{PolitiFact website compromised to run Coinhive}
 \ytl{2017-10-16}{Coinhive launched authedmine - authorized mining}
 \ytl{2017-11-23}{LiveHelpNow Hack incident}
  
