--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -19,7 +19,7 @@ A website administrator can add a mining script to her webpage, with or without 
 
 \subsection{Mixed content} 
 
-Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America.\url{http://globovision.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}.
+Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America \url{http://globovision.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}.
 
 \subsection{Browser extensions} 
 
@@ -81,6 +81,7 @@ The same methodology was used on other datasets, such as PublicWWW\footnote{Sear
 \begin{tabular}{|cc|c|}
 \hline
 \textbf{Website} & \textbf{Results} & \textbf{Query Parameter}  \\ \hline
+Coinhive & 30611 & `coinhive.min.js`   \\  \hline
 JSEcoin & 1131 & `load.jsecoin.com`   \\  \hline
 Crypto-Loot & 695 & `CryptoLoot.Anonymous`  \\  \hline
 Minr & 324 & `minr.pw`,`st.kjli.fi`, \\
