--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -1,12 +1,33 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Jeremy Clark at 2018-01-22 12:19:20 -0500 
+%% Created for Jeremy Clark at 2018-01-22 18:21:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Acer:2017:WWR:3133956.3134007,
+	Acmid = {3134007},
+	Address = {New York, NY, USA},
+	Author = {Acer, Mustafa Emre and Stark, Emily and Felt, Adrienne Porter and Fahl, Sascha and Bhargava, Radhika and Dev, Bhanu and Braithwaite, Matt and Sleevi, Ryan and Tabriz, Parisa},
+	Booktitle = {CCS},
+	Date-Added = {2018-01-22 23:18:50 +0000},
+	Date-Modified = {2018-01-22 23:18:59 +0000},
+	Doi = {10.1145/3133956.3134007},
+	Isbn = {978-1-4503-4946-8},
+	Keywords = {browser security, https, tls, warnings},
+	Location = {Dallas, Texas, USA},
+	Numpages = {14},
+	Pages = {1407--1420},
+	Publisher = {ACM},
+	Series = {CCS '17},
+	Title = {Where the Wild Warnings Are: Root Causes of Chrome HTTPS Certificate Errors},
+	Url = {http://doi.acm.org/10.1145/3133956.3134007},
+	Year = {2017},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/3133956.3134007},
+	Bdsk-Url-2 = {https://dx.doi.org/10.1145/3133956.3134007}}
 
 @techreport{MMLN17,
 	Author = {{Miller}, A. and {Moeser}, M. and {Lee}, K. and {Narayanan}, A.},
@@ -285,8 +306,7 @@
 	Note = {Accessed: 2018-01-20},
 	Title = {Persistent drive-by cryptomining coming to a browser near you},
 	Year = {2017}}
-	
-	
+
 @misc{badpacketspublicwww,
 	Author = {Troy Mursch},
 	Howpublished = {\url{https://badpackets.net/cryptojacking-malware-coinhive-found-on-30000-websites/}},
