fix figure labels

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -113,13 +113,13 @@ Papoto & 42 & `papoto.com/lib/papoto.js`  \\ \hline
 \begin{figure}[t]
 \centering
 \includegraphics[width=0.9\linewidth]{figures/non-coinhive-miners-pie.png}
-\caption{Share of websites using a Coinhive alternatives, details in Table~\ref{tab:findcoinhive}  \label{fig:copycat}}
+\caption{Share of websites using a Coinhive alternatives, details in Table~\ref{tab:findcoinhive} } \label{fig:copycat}
 \end{figure}
 
 \begin{figure}[t]
 \centering
 \includegraphics[width=0.9\linewidth]{figures/usage_of_authedmine_over_time.png}
-	\caption{Usage of AuthedMine Miner scripts in top one million websites since its introduction.\label{fig:authmine}}
+	\caption{Usage of AuthedMine Miner scripts in top one million websites since its introduction} \label{fig:authmine}
 \end{figure}
 
 \begin{figure}[t]
